--- a/parsers/user_def_property.rdl
+++ b/parsers/user_def_property.rdl
@@ -39,6 +39,11 @@ property hj_cdc {
     type = boolean;
 };
 
+property base_addr {
+    component = addrmap;
+    type = longint;
+};
+
 property hj_reserved_space{
     component = mem;
     type = boolean;
