--- a/test/test_alias_2.rdl
+++ b/test/test_alias_2.rdl
@@ -1,4 +1,5 @@
 addrmap root_map {
+    base_addr = 0x20000000;
 	hj_gendisp = true;
     reg tem_alias_1{
         field {} FIELD_1[17:17] = 0x0;
@@ -23,6 +24,7 @@ addrmap root_map {
 		hj_gendisp = true;
 		addrmap {
 			hj_genslv = true;
+            hj_cdc = true;
 			flatten_map map_11[5];
 			flatten_map map_12[10];
 		} slv_map;
