add regslv jinja2 template

--- a/parsers/db_reg_def.rdl
+++ b/parsers/db_reg_def.rdl
@@ -8,6 +8,6 @@ regfile db_regs {
         field { sw=r; } acc_type[4:4] = 0x0;
         field { sw=r; } err_type[3:2] = 0x0;
         field { sw=r; } err_occur[1:1] = 0x0;
-        field { sw=rw; singlepulse;} soft_rst[0:0] = 0x0;
+        field { sw=rw; hw=r; singlepulse;} soft_rst[0:0] = 0x0;
     } stat;
 };
