--- a/generators/pdf/templates/org.jinja
+++ b/generators/pdf/templates/org.jinja
@@ -42,13 +42,15 @@ Description: {{get_property(node, "desc")}} \\
 {%- endmacro -%}
 
 {%- macro field_row(node) %}
-{{"| %2d:%-2d | %8s | %15s | %2s,%4s,%-5s | %-9s |"|format(node.msb, node.lsb,
-                                                           get_inst_name(node),
-                                                           get_property(node, "reset"),
-                                                           get_property(node, "sw"),
-                                                           get_property(node, "onread"),
-                                                           get_property(node, "onwrite"),
-                                                           get_property(node, "hw"))}}
+{{"| %2d:%-2d | %8s | %15s | %2s,%4s,%-5s | %-9s |"|format(
+    node.msb,
+    node.lsb,
+    get_inst_name(node),
+    get_property(node, "reset"),
+    get_property(node, "sw"),
+    get_property(node, "onread"),
+    get_property(node, "onwrite"),
+    get_property(node, "hw"))}}
 {%- endmacro %}
 
 {%- macro field_desc(node) -%}
