abort legacy code for generating regslv

--- a/generators/rtl/templates/regslv_template.jinja
+++ b/generators/rtl/templates/regslv_template.jinja
@@ -1,46 +1,46 @@
 {%- set slv_name = get_rtl_name(slv_node) -%}
 {%- set reg_list = get_all_regs(slv_node) -%}
-{%- set addr_list = get_addr_list(slv_node) -%}
+{%- set addr_list = get_property(slv_node, "addr_list") -%}
 {%- set addr_loc_num = get_addr_loc_num(slv_node) -%}
 `include "field_attr.vh"
 `default_nettype none
 
 module {{slv_name}} (
-{% for reg in reg_list -%}
-    {% set reg_name = get_rtl_name(reg) %}
-    {% for field in reg.fields(skip_not_present=False) %}
-    {% if not field.is_alias %}
-    {% if field.is_hw_readable %}
+{%- for reg in reg_list %}
+    {%- set reg_name = get_rtl_name(reg) -%}
+    {%- for field in reg.fields(skip_not_present=False) -%}
+    {%- if not field.is_alias -%}
+    {%- if field.is_hw_readable %}
     {{reg_name}}__{{field.inst_name}}__curr_value,
-    {% endif %}
-    {% if field.is_hw_writable %}
+    {%- endif %}
+    {%- if field.is_hw_writable %}
     {{reg_name}}__{{field.inst_name}}__pulse,
     {{reg_name}}__{{field.inst_name}}__next_value,
-    {% endif %}
-    {% if get_property(field, "swacc") %}
+    {%- endif %}
+    {%- if get_property(field, "swacc") %}
     {{reg_name}}__{{field.inst_name}}__swacc,
-    {% endif %}
-    {% if get_property(field, "swmod") %}
+    {%- endif %}
+    {%- if get_property(field, "swmod") %}
     {{reg_name}}__{{field.inst_name}}__swmod,
-    {% endif %}
-    {% endif %}
-    {%- endfor -%}
-{%- endfor -%}
-    // software access ports: reg_native_if
+    {%- endif %}
+    {%- endif %}
+    {%- endfor %}
+{%- endfor %}
     clk,
     rst_n,
     req_vld,
     wr_en,
     rd_en,
+    addr,
     wr_data,
     soft_rst,
     rd_data,
     ack_vld,
     err,
-{% if has_cdc(slv_node) -%}
+{%- if has_cdc(slv_node) %}
     regslv_clk,
     regslv_rst_n,
-{%- endif -%}
+{%- endif %}
     err_en
 );
     parameter       ADDR_WIDTH                  = {{get_addr_width(slv_node)}};
@@ -50,24 +50,25 @@ module {{slv_name}} (
     localparam      REG_NUM                     = {{addr_loc_num}};
     {% for reg in reg_list -%}
     {%- set reg_name = get_rtl_name(reg) -%}
-    {% for field in reg.fields(skip_not_present=False) %}
-    {% if not field.is_alias %}
-    {% if field.is_hw_readable %}
+    {%- for field in reg.fields(skip_not_present=False) %}
+    {%- if not field.is_alias %}
+    {%- if field.is_hw_readable %}
     output  logic   [{{field.width-1}}:0]       {{reg_name}}__{{field.inst_name}}__curr_value;
-    {% endif %}
-    {% if field.is_hw_writable %}
-    input   logic   [{{field.width-1}}:0]       {{reg_name}}__{{field.inst_name}}__pulse;
+    {%- endif %}
+    {%- if field.is_hw_writable %}
+    input   logic                               {{reg_name}}__{{field.inst_name}}__pulse;
     input   logic   [{{field.width-1}}:0]       {{reg_name}}__{{field.inst_name}}__next_value;
-    {% endif %}
-    {% if get_property(field, "swacc") %}
+    {%- endif %}
+    {%- if get_property(field, "swacc") %}
     output  logic   [1:0]                       {{reg_name}}__{{field.inst_name}}__swacc;
-    {% endif %}
-    {% if get_property(field, "swmod") %}
+    {%- endif %}
+    {%- if get_property(field, "swmod") %}
     output  logic                               {{reg_name}}__{{field.inst_name}}__swmod;
-    {% endif %}
-    {% endif %}
-    {%- endfor -%}
-    {%- endfor -%}
+    {%- endif %}
+    {%- endif %}
+    {%- endfor %}
+    {%- endfor %}
+
     input   logic                               clk;
     input   logic                               rst_n;
 
@@ -80,11 +81,11 @@ module {{slv_name}} (
     output  logic   [DATA_WIDTH-1:0]            rd_data;
     output  logic                               ack_vld;
     output  logic                               err;
-{% if has_cdc(slv_node) -%}
+{%- if has_cdc(slv_node) %}
     // at internal register clock domain
     input   logic                               regslv_clk;
     input   logic                               regslv_rst_n;
-{%- endif -%}
+{%- endif %}
     input   logic                               err_en;
 
     logic                                       int_req_vld;
@@ -96,8 +97,15 @@ module {{slv_name}} (
     logic   [DATA_WIDTH-1:0]                    int_rd_data;
     logic                                       int_ack_vld;
     logic                                       int_err;
+{%- if has_cdc(slv_node) %}
+    logic   [REG_NUM-1:0] [DATA_WIDTH-1:0]      reg_sw_rd_data;
+    logic   [REG_NUM-1:0] [DATA_WIDTH-1:0]      reg_rd_data_mux_din;
+    logic   [REG_NUM-1:0]                       reg_rd_data_mux_sel;
+    logic   [DATA_WIDTH-1:0]                    reg_rd_data_mux_dout;
+    logic                                       reg_rd_data_mux_dout_vld;
+    logic                                       reg_rd_data_vld;
+    logic   [DATA_WIDTH-1:0]                    reg_rd_data;
 
-{% if has_cdc(slv_node) -%}
 //***********************************CLOCK DOMAIN CROSSING********************************************//
     localparam      FORWARD_DELIVER_NUM         = ADDR_WIDTH + DATA_WIDTH + 4;
     localparam      BACKWARD_DELIVER_NUM        = DATA_WIDTH + 2;
@@ -131,7 +139,7 @@ module {{slv_name}} (
         .rst_b_n                                (rst_n),
         .pulse_out                              (pulse_deliver_backward_pulse_out));
     assign  {ack_vld, err, rd_data}             = pulse_deliver_backward_pulse_out;
-{% else %}
+{%- else %}
     assign  int_req_vld                         = req_vld;
     assign  int_wr_en                           = wr_en;
     assign  int_rd_en                           = rd_en;
@@ -141,7 +149,7 @@ module {{slv_name}} (
     assign  rd_data                             = int_rd_data;
     assign  ack_vld                             = int_ack_vld;
     assign  err                                 = int_err;
-{%- endif -%}
+{%- endif %}
 
 {%- if has_cdc(slv_node) -%}
 {%- set curr_clk = "regslv_clk" -%}
@@ -149,14 +157,16 @@ module {{slv_name}} (
 {% else %}
 {%- set curr_clk = "clk" -%}
 {%- set curr_async_rst_n = "rst_n" -%}
-{%- endif -%}
+{%- endif %}
 
 //**************************************ADDRESS DECODER***********************************************//
     logic   [REG_NUM-1:0]                       dec_reg_sel;
     logic                                       dec_dummy_sel;
+    logic                                       reg_acc;
     logic                                       dummy_acc;
     logic   [REG_NUM-1:0]                       reg_sw_wr_sel;
     logic   [REG_NUM-1:0]                       reg_sw_rd_sel;
+    logic   [DATA_WIDTH-1:0]                    reg_sw_wr_data;
 
     always_comb begin
         if (int_req_vld) begin
@@ -166,7 +176,7 @@ module {{slv_name}} (
             unique casez (int_addr)
                 {%- for addr in addr_list %}
                 {{format_addr(addr)}}: dec_reg_sel[{{loop.index0}}] = 1'b1;
-                {% endfor -%}
+                {%- endfor %}
                 default: dec_dummy_sel = 1'b1;
             endcase
         end
@@ -198,11 +208,13 @@ module {{slv_name}} (
                     dummy_acc                           <= dec_dummy_sel;
                 end
             end
+        end
         else begin: g_no_reg_ff
             assign  reg_sw_wr_sel                       = {% raw %}{REG_NUM{int_wr_en}} & dec_reg_sel{% endraw %};
             assign  reg_sw_rd_sel                       = {% raw %}{REG_NUM{int_rd_en}} & dec_reg_sel{% endraw %};
             assign  reg_sw_wr_data                      = int_wr_data;
             assign  dummy_acc                           = dec_dummy_sel;
+        end
     endgenerate
 
     assign  reg_acc                             = reg_sw_wr_sel | reg_sw_rd_sel;
@@ -226,44 +238,51 @@ module {{slv_name}} (
         .reg_rd_data_vld                        (reg_rd_data_vld));
 
 //***********************************FIELDS AND REGISTERS*********************************************//
-{% for reg in reg_list %}
-    {% set reg_name = get_rtl_name(reg) %}
-    {%- set addr_range = get_property(reg, "addr_loc_range") -%}
-    // snapshot register
-    {% if need_snapshot(reg) %}
+{%- for reg in reg_list %}
+    {%- set reg_name = get_rtl_name(reg) %}
+    logic                                       {{reg_name}}__sw_wr_en;
+    logic                                       {{reg_name}}__sw_rd_en;
+    logic   [{{reg.size*8-1}}:0]                {{reg_name}}__sw_wr_data;
+    logic   [{{reg.size*8-1}}:0]                {{reg_name}}__sw_rd_data;
+{%- endfor -%}
+{% set int_reg_idx = get_property(slv_node, "int_reg_idx") %}
+{%- for reg in reg_list %}
+    {%- set reg_name = get_rtl_name(reg) -%}
+    {%- set reg_idx = int_reg_idx[loop.index0] -%}
+    {%- if need_snapshot(reg) %}
     snapshot_reg #(.DATA_WIDTH(DATA_WIDTH), .REG_WIDTH({{reg.size * 8}}))
     {{reg_name}}_snapshot_reg (
         .clk                                    ({{curr_clk}}),
         .rst_n                                  ({{curr_async_rst_n}}),
         .soft_rst                               (int_soft_rst),
-        .snap_wr_en                             (reg_sw_wr_sel[{{addr_range[-1]}}:{{addr_range[0]}}]),
-        .snap_rd_en                             (reg_sw_rd_sel[{{addr_range[-1]}}:{{addr_range[0]}}]),
-        .snap_wr_data                           ({{"{"}}{{addr_range|length}}{{"{"}}reg_sw_wr_data{{"}}"}}),
-        .snap_rd_data                           (reg_sw_rd_data[{{addr_range[-1]}}:{{addr_range[0]}}]),
+        .snap_wr_en                             (reg_sw_wr_sel[{{reg_idx[1]}}:{{reg_idx[0]}}]),
+        .snap_rd_en                             (reg_sw_rd_sel[{{reg_idx[1]}}:{{reg_idx[0]}}]),
+        .snap_wr_data                           ({{"{"}}{{reg_idx[1]-reg_idx[0]+1}}{{"{"}}reg_sw_wr_data{{"}}"}}),
+        .snap_rd_data                           (reg_sw_rd_data[{{reg_idx[1]}}:{{reg_idx[0]}}]),
         .reg_wr_en                              ({{reg_name}}__sw_wr_en),
         .reg_rd_en                              ({{reg_name}}__sw_rd_en),
         .reg_wr_data                            ({{reg_name}}__sw_wr_data),
         .reg_rd_data                            ({{reg_name}}__sw_rd_data)
     );
-    {% else %}
-    assign  {{reg_name}}__sw_wr_en              = reg_sw_wr_sel[{{addr_range[0]}}];
-    assign  {{reg_name}}__sw_rd_en              = reg_sw_rd_sel[{{addr_range[0]}}];
+    {%- else %}
+    assign  {{reg_name}}__sw_wr_en              = reg_sw_wr_sel[{{reg_idx[0]}}];
+    assign  {{reg_name}}__sw_rd_en              = reg_sw_rd_sel[{{reg_idx[0]}}];
     assign  {{reg_name}}__sw_wr_data            = reg_sw_wr_data;
-
-    assign  reg_sw_rd_data[{{addr_range[0]}}]   = {{reg_name}}__sw_rd_data;
-    {% endif %}
-
-    // field instantiation
-    {% for field in reg.fields(skip_not_present=False) %}
-    {%- if not field.is_alias -%}
+    assign  reg_sw_rd_data[{{reg_idx[0]}}]   = {{reg_name}}__sw_rd_data;
+    {%- endif %}
+{% for field in reg.fields(skip_not_present=False) %}
+{%- if not field.is_alias %}
     field #(
         .F_WIDTH                                ({{field.width}}),
-        .ARST_VALUE                             ({{"%d'h%x"|format(field.width, field.reset)}}),
+        .ARST_VALUE                             ({{"%d'h%x"|format(field.width, get_reset_val(field))}}),
         .ALIAS_NUM                              ({{get_alias_num(field)}}),
-        .SRST_CNT                               ({{get_sync_rst(field)|length}})
+        .SRST_CNT                               ({{get_sync_rst(field)|length}}),
         .SW_TYPE                                ({{"{"~format_sw_type(field)~"}"}}),
         .SW_ONREAD_TYPE                         ({{"{"~format_onread_type(field)~"}"}}),
         .SW_ONWRITE_TYPE                        ({{"{"~format_onwrite_type(field)~"}"}}),
+        .SWMOD                                  ({{"{%d{1'b%d}}"|format(get_alias_num(field), has_swmod(field))}}),
+        .SWACC                                  ({{"{%d{1'b%d}}"|format(get_alias_num(field), has_swacc(field))}}),
+        .PULSE                                  ({{"{%d{1'b%d}}"|format(get_alias_num(field), is_singlepulse(field))}}),
         .HW_TYPE                                ({{format_hw_type(field)}}),
         .PRECEDENCE                             ({{format_precedence_type(field)}}))
     x__{{reg_name}}__{{field.inst_name}} (
@@ -274,17 +293,17 @@ module {{slv_name}} (
                                                 {%- else %}1'b0{% endif -%}),
         .sw_wr_data                             ({{"{"}}{{reg_name}}__sw_wr_data[{{field.high}}:{{field.low}}]
                                                 {%- if field.has_aliases -%}
-                                                {%- for alias_field in field.aliases -%}
+                                                {%- for alias_field in field.aliases(skip_not_present=False) -%}
                                                 , {{get_rtl_name(alias_field.parent)}}__sw_wr_data[{{field.high}}:{{field.low}}]
                                                 {%- endfor -%}{%- endif %}{{"}"}}),
         .sw_rd                                  ({{"{"}}{{reg_name}}__sw_rd_en
                                                 {%- if field.has_aliases -%}
-                                                {%- for alias_field in field.aliases -%}
+                                                {%- for alias_field in field.aliases(skip_not_present=False) -%}
                                                 , {{get_rtl_name(alias_field.parent)}}__sw_rd_en
                                                 {%- endfor -%}{%- endif %}{{"}"}}),
         .sw_wr                                  ({{"{"}}{{reg_name}}__sw_wr_en
                                                 {%- if field.has_aliases -%}
-                                                {%- for alias_field in field.aliases -%}
+                                                {%- for alias_field in field.aliases(skip_not_present=False) -%}
                                                 , {{get_rtl_name(alias_field.parent)}}__sw_wr_en
                                                 {%- endfor -%}{%- endif %}{{"}"}}),
         .swmod_out                              ({%- if get_property(field, "swmod") -%}
@@ -297,28 +316,19 @@ module {{slv_name}} (
                                                 {%- else %}1'b0{% endif %}),
         .field_value                            ({% if field.is_hw_readable or field.is_sw_readable -%}
                                                 {{reg_name}}__{{field.inst_name}}__curr_value{% endif %}));
-    {% endif %}
-    {% endfor %}
-    // concat
+{% endif -%}
+{% endfor %}
+    {% set orig_reg_name = get_rtl_name(reg.alias_primary) if reg.is_alias else reg_name -%}
     always_comb begin
         {{reg_name}}__sw_rd_data = {{reg.size * 8}}'h0;
-        {%- for field in reg.fields %}
+        {%- for field in reg.fields(skip_not_present=False) %}
         {%- if field.is_sw_readable %}
-        {{reg_name}}__sw_rd_data[{{field.high}}:{{field.low}}] = {{reg_name}}__{{field.inst_name}}__curr_value;
+        {{reg_name}}__sw_rd_data[{{field.high}}:{{field.low}}] = {{orig_reg_name}}__{{field.inst_name}}__curr_value;
         {%- endif %}
         {%- endfor %}
     end
 {% endfor %}
-
 //*************************************READ DATA MUX**************************************************//
-    logic   [REG_NUM-1:0] [DATA_WIDTH-1:0]      reg_sw_rd_data;
-    logic   [REG_NUM-1:0] [DATA_WIDTH-1:0]      reg_rd_data_mux_din;
-    logic   [REG_NUM-1:0]                       reg_rd_data_mux_sel;
-    logic   [DATA_WIDTH-1:0]                    reg_rd_data_mux_dout;
-    logic                                       reg_rd_data_mux_dout_vld;
-    logic                                       reg_rd_data_vld;
-    logic   [DATA_WIDTH-1:0]                    reg_rd_data;
-
     assign  reg_rd_data_mux_din                 = reg_sw_rd_data;
     assign  reg_rd_data_mux_sel                 = reg_sw_rd_sel;
     assign  reg_rd_data_vld                     = reg_rd_data_mux_dout_vld;
