--- a/generators/rtl/test/case_6/tb/testbench.rdl
+++ b/generators/rtl/test/case_6/tb/testbench.rdl
@@ -1,45 +1,43 @@
-addrmap reg_top {
-    hj_genmst = true;
-    hj_flatten_addrmap = false;
+addrmap reg_network {
+    hj_gennetwork = true;
     addrmap {
-        hj_gendisp = true;
-        hj_flatten_addrmap = false;
+        hj_genmst = true;
         addrmap {
-            hj_gendisp = false;
-            hj_genslv = true;
-            hj_flatten_addrmap = false;
+            hj_gendisp = true;
+            addrmap {
+                hj_genslv = true;
+                // implement internal registers
+                reg {
+                    regwidth = 32;
+                    field {
+                        hw = r;
+                    } FIELD_0[31:0] = 0x0;
+                } REG1_HW_RO;
 
-            // implement internal registers
-            reg {
-                regwidth = 32;
-                field {
-                    hw = r;
-                } FIELD_0[31:0] = 0x0;
-            } REG1_HW_RO;
+                reg {
+                    regwidth = 32;
+                    field {
+                        hw = rw;
+                    } FIELD_0[31:0] = 0x0;
+                } REG2_HW_RW;
 
-            reg {
-                regwidth = 32;
-                field {
-                    hw = rw;
-                } FIELD_0[31:0] = 0x0;
-            } REG2_HW_RW;
+                reg {
+                    regwidth = 32;
+                    field {
+                        hw = rw;
+                        hwclr;
+                    } FIELD_0[31:0] = 0xaaaaaaaa;
+                } REG3_HW_CLR;
 
-            reg {
-                regwidth = 32;
-                field {
-                    hw = rw;
-                    hwclr;
-                } FIELD_0[31:0] = 0xaaaaaaaa;
-            } REG3_HW_CLR;
-
-            reg {
-                regwidth = 32;
-                field {
-                    hw = rw;
-                    hwset;
-                } FIELD_0[31:0] = 0x0;
-            } REG4_HW_SET;
-
-        } reg_block_1;
-    } disp_top;
+                reg {
+                    regwidth = 32;
+                    field {
+                        hw = rw;
+                        hwset;
+                    } FIELD_0[31:0] = 0x0;
+                } REG4_HW_SET;
+            } reg_block_1;
+        } top;
+        db_regs db_regs %=0x1000;
+    } top;
 };
