--- a/generators/rtl/test/case_8/tb/testbench.rdl
+++ b/generators/rtl/test/case_8/tb/testbench.rdl
@@ -1,8 +1,8 @@
 reg REG_def {
-		regwidth = 64;
-		field {
-			sw = rw;
-		} FIELD_0[63:0];
+        regwidth = 64;
+        field {
+            sw = rw;
+        } FIELD_0[63:0];
 };
 
 mem ext_mem_def {
@@ -10,24 +10,23 @@ mem ext_mem_def {
     memwidth = 128;
 };
 
-addrmap reg_top {
-	hj_genmst = true;
-	hj_flatten_addrmap = false;
-	addrmap {
-		hj_gendisp = true;
-		hj_flatten_addrmap = false;
-		addrmap {
-			hj_gendisp = false;
-			hj_genslv = true;
-			hj_flatten_addrmap = false;
-			hj_cdc = true;
-
-			// implement internal registers
-			REG_def REG1;
-			// forward reg_native_if to external memory
-			// memwidth=128, datawidth=32, implement snapshot module
-			external ext_mem_def ext_mem_1;
-			ext_mem_1 -> hj_cdc = true;
-		} reg_block_1;
-	} disp_top;
+addrmap reg_network {
+    hj_gennetwork = true;
+    addrmap {
+        hj_genmst = true;
+        addrmap {
+            hj_gendisp = true;
+            addrmap {
+                hj_genslv = true;
+                hj_cdc = true;
+                // implement internal registers
+                REG_def REG1;
+            } reg_block_1;
+            // forward reg_native_if to external memory
+            // memwidth=128, datawidth=32, implement snapshot module
+            external ext_mem_def ext_mem_1;
+            ext_mem_1 -> hj_cdc = true;
+        } top;
+        db_regs db_regs %=0x1000;
+    } top;
 };
